# stock-metadata-agent

./: .env.example  .gitignore  AGENTS.md  README.md  Sample_Adobe_Stock_CSV_upload.csv  adobe_categories.md  generate_stock_metadata.py  iStockMetadataTemplate.csv  processed_photos.txt  pyproject.toml  requirements.txt  shutterstock_categories.md
skills/stock-photo-metadata/: SKILL.md
skills/stock-photo-metadata/agents/: openai.yaml
skills/stock-photo-metadata/references/: editorial-guidance.md  location-and-editorial.md  metadata-template.md  provider-authorities.md  writing-guidance.md
stock_metadata_agent/: __init__.py  geocoding.py  workflow.py
stock_metadata_agent/scripts/: extract_exif_context.py  organize_editorial_assets.py  split_istock_batches.py
tests/: test_cli.py
